# aoi-hitomi-engine

./: .gitattributes  .gitignore
ci/: build.cmd
scripts/: bundle_application.py  launcher.cmd
sources/angular/: .gitignore  angular.json  bun.lockb  package.json
sources/angular/src/: index.html  main.ts
sources/angular/src/ahe/components/: select.directive.ts
sources/angular/src/app/: app.component.ts  app.service.ts
sources/angular/src/app/services/: state.service.ts
sources/aoi-hitomi-engine/: LICENSE.aoi-hitomi-engine  angular.json  bun.lockb  eslint.config.js  package.json  tailwind.config.js
sources/aoi-hitomi-engine/src/app/: app.component.ts  app.config.ts  app.layout.directive.ts  app.routes.ts
sources/python/: pyproject.toml  requirements.txt
sources/python-app-core/: LICENSE.aoi-hitomi-engine  main.py  pyproject.toml  requirements.txt
sources/python-app-core/aoi_hitomi_engine/: __main__.py
sources/python-app-core/aoi_hitomi_engine/core/pywebview/: _app.py  _bridge.py
sources/python-app-core/aoi_hitomi_engine/helpers/: __init__.py  _file_picker_helper.py  _path_helper.py
sources/python-app-core/aoi_hitomi_engine/utilities/io/file/: __init__.py
sources/python-app-core/aoi_hitomi_engine/utilities/io/toml/: __init__.py
sources/python-app-core/aoi_hitomi_engine/utilities/path/: __init__.py
sources/python-app-core/aoi_hitomi_engine/utilities/system/dialog/: __init__.py
sources/python/aoi_hitomi_engine/: __main__.py
sources/python/aoi_hitomi_engine/helpers/: __init__.py  _logging_helper.py  _path_helper.py
(+11 files in other folders)
